経路点についてから次の経路を計算を行うようにした

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,8 @@ name: ziplines
 version: 0.1
 api: 1.18.1
 api-version: 1.18
+commands:
+  zipline:
+    description: ZipLineCommand
+    permission: op 
+    usage: run command with -help argument
