--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>net.rikkido</groupId>
   <artifactId>ziplines</artifactId>
   <version>1.0-SNAPSHOT</version>
-
+  <packaging>jar</packaging>
   <name>ziplines</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
