--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -33,11 +33,24 @@ jobs:
         name: Package
         path: staging
     - name: Create Release
-      uses: actions/upload-release-asset@v1.0.2
-      env: 
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./taget/*.jar
+        asset_name: Zipline.zip
         asset_content_type: application/jar
         
