--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,9 +4,8 @@
 name: Maven Package
 
 on:
-  push:
-    tags:
-     - '*'
+  release:
+    types: [created]
 
 jobs:
   build:
@@ -32,23 +31,20 @@ jobs:
       with:
         name: Package
         path: staging
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
+
+    - name: Get release
+      id: get_release
+      uses: bruceadams/get-release@v1.2.3
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
+
     - name: Upload Release Asset
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{ steps.get_release.outputs.upload_url }}
         asset_path: ./taget/*.jar
         asset_name: Zipline.zip
         asset_content_type: application/jar
