--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -37,7 +37,8 @@ jobs:
       uses: bruceadams/get-release@v1.2.3
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+    - name: check Current Directory
+      run: pwd
     - name: Upload Release Asset
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1
