--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -46,7 +46,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_release.outputs.upload_url }}
-        asset_path: ./taget/*.jar
+        asset_path: ./taget/ziplines-1.0-SNAPSHOT.jar
         asset_name: Zipline.zip
         asset_content_type: application/jar
         
