--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -49,6 +49,6 @@ jobs:
       with:
         upload_url: ${{ steps.get_release.outputs.upload_url }}
         asset_path: ./target/ziplines-1.0-SNAPSHOT.jar
-        asset_name: zipline.jar
+        asset_name: zipline${{steps.get_release.outputs.tag_name }}.jar
         asset_content_type: application/jar
         
