レシピ設定が可能に

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,3 +3,17 @@ zipline:
   max_radius: -1.0
 ziplining:
   finizh_raduis: 0.5
+item:
+  ZiplineRecipe:
+    ItemShape:
+      - ILI
+    RecipeItem:
+      - I: IRON_INGOT
+      - L: LEAD
+  DebugStickRecipe:
+    ItemShape:
+      - D
+      - S
+    RecipeItem:
+      - D: DIAMOND
+      - S: STICK
